﻿2016-10-09 Version 1.1.1 (stable)
	connection settings are now passed through a posted form instead of url querystring, for security purpose

2016-09-10 Version 1.1.0 (beta)
	upgraded freerdp to the latest version.	additionnaly, myrtille and freerdp are now loose coupled (freerdp forked into https://github.com/cedrozor/FreeRDP)
	NLA is now supported
	hardware GDI (auto-detected)
	added clipboard support
	improved myrtille homepage

2016-07-14 Version 1.0.6 (stable)
	added automatic creation of a myrtille self-signed certificate into IIS
	removed password for the websocket server certificate as IIS certificate export is done on the gateway machine itself

2016-07-03 Version 1.0.5 (stable)
	removed the RDS role, application server role and file storage service prerequisites
	removed the creation of an rdp user ("Myrtille") on install (it was used for tests but is no longer relevant)
	removed the configuration on the localhost rdp server
	added automatic configuration of the firewall (websockets ports)

2016-06-11 Version 1.0.4 (beta)
	Added domain support to file transfer (see file transfer configuration in documentation)
	Build set back to AnyCPU to have 64 bits registry hives loaded on 64 bits machines (fix a load user profile issue)

2016-04-15 Version 1.0.3 (stable)
	Added elevated privileges check (UAC) to the installer (must be run as administrator)
	Fixed an installer issue in repair mode

2016-04-13 Version 1.0.2 (stable)
	Added Ctrl+Alt+Del button

2016-04-06 Version 1.0.1 (stable)
	Forced x86 (32 bits) build, in order to fix COM issues on mixed platforms

2016-03-08 Version 1.0.0 (stable)
	Initial release version