@@ -1,0 +1,2 @@
+Here goes the myrtille rdp client, a fork of FreeRDP located at https://github.com/cedrozor/FreeRDP
+See https://github.com/cedrozor/myrtille/blob/master/DOCUMENTATION.md#build for information and steps to build it along with myrtille
